# ocr-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ocrServer.config.json
cmake/: SourceGroups.cmake
example/: ocrServer.postman.collection.json
include/: httplib.h
src/: image.h  main.cpp  ocr_engine.cpp  ocr_engine.h  ocr_options.cpp  ocr_options.h  ocr_server.cpp  ocr_server.h
